--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
   "author": "Sweetness",
   "license": "ISC",
   "devDependencies": {
+    "browser-sync": "^2.26.14",
     "gulp": "^4.0.2",
-    "gulp-sass": "^4.1.0"
+    "gulp-concat": "^2.6.1",
+    "gulp-sass": "^4.1.0",
+    "gulp-uglify-es": "^2.0.0",
+    "jquery": "^3.6.0",
+    "postcss": "^8.3.0",
+    "postcss-sort-media-queries": "^3.10.11"
   }
 }
