--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
     "jquery": "^3.6.0",
     "postcss": "^8.3.0",
     "postcss-sort-media-queries": "^3.10.11"
+  },
+  "dependencies": {
+    "normalize.css": "^8.0.1",
+    "swiper": "^6.7.5"
   }
 }
